--- a/urban-innovations_rent.css
+++ b/urban-innovations_rent.css
@@ -102,6 +102,11 @@ min-height: 650px;
 	left: 653px;
 	top: 80px;
 }
+#rnt_imgroll img {
+	object-fit: cover;
+	width: 284px;
+	height: 250px;
+}
 
 /* MAIN */
 #rescom_app {
